--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "google-auth-library": "^6.0.5",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.25",
     "mongoose-unique-validator": "^2.0.3",
     "underscore": "^1.10.2"
